--- a/ex02/ex02.html
+++ b/ex02/ex02.html
@@ -14,15 +14,15 @@
 
     <section>
         <div id="inicio">
-            <p>Início: <input type="number" id ="txt_inicio" name="txt_inicio"></p>
+            <p>Início: <input type="number" id ="txt_inicio" name="txt_inicio" min = "0"></p>
         </div>
 
         <div id="fim">
-            <p>Fim: <input type="number" name="txt_fim" id="txt_fim"></p>
+            <p>Fim: <input type="number" name="txt_fim" id="txt_fim" min = "0"></p>
         </div>
 
         <div id="passo">
-            <p>Passo: <input type="number" name="txt_passo" id="txt_passo"></p>
+            <p>Passo: <input type="number" name="txt_passo" id="txt_passo" min = "0"></p>
         </div>
 
         <div id="botao">
